--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Sakshikumbhar99.github.io/photography",
+  "homepage": "https://Sakshikumbhar99.github.io/MYCOLLECTION/",
   "name": "collections",
   "private": true,
   "version": "0.0.0",
